# urbes-globe-viz

./: .env.example  .gitignore  .prettierignore  ADDING_A_DATASET.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SUMMARY_GHSL_PROCESS.md  citation.cff  lefthook.yml  legend-tutorial.md  npm-shrinkwrap.json  package.json  urbes-globe-viz.code-workspace
processing/: Makefile  README.md  convert_grayscale_to_rgb.py  pyproject.toml
processing/aldo_netcdf/: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  nc_to_cog.py  palm_ta_cog.tif.aux.xml  wrf_d02_q2_cog.tif.aux.xml  wrf_d02_swdown_cog.tif.aux.xml  wrf_d02_t2_cog.tif.aux.xml  wrf_d02_u10_cog.tif.aux.xml  wrf_d03_q2_cog.tif.aux.xml  wrf_d03_swdown_cog.tif.aux.xml  wrf_d03_t2_cog.tif.aux.xml  wrf_d03_u10_cog.tif.aux.xml  wrf_d04_q2_cog.tif.aux.xml  wrf_d04_swdown_cog.tif.aux.xml  wrf_d04_t2_cog.tif.aux.xml  wrf_d04_u10_cog.tif.aux.xml
processing/cookbook/: README.md  csv_spatial_join.md  csv_spatial_join.py  csv_to_pmtiles.md  csv_to_pmtiles.py  geojson_to_pmtiles.md  gpkg_to_pmtiles.md  netcdf_to_cog.md  raster_to_cog.md  shp_to_pmtiles.md
processing/dave_flows/: Makefile  README.md  flows_to_geojson.py  process.sh
processing/ghsl_to_pmtiles/: Makefile  README.md  ghsl_colors.txt  pack_mbtiles.py
processing/ghsl_to_pmtiles/scitas/: 01_z0-8.sbatch  02_z9-12.sbatch  03_z13.sbatch  README.md  (+2 more)
processing/guf_urban_footprint/: .gitignore  Makefile  README.md  download_guf_cog.py  process.sh  requirements.txt
processing/martin_building_heights/: Makefile  README.md  csv_to_geojson.py  process.sh
(+86 files in other folders)
