[project]
name = "urbes-globe-viz-processing"
version = "0.1.0"
description = "Processing scripts for URBES Globe Visualization data"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3.0",
    "requests>=2.28.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "rio-cogeo>=5.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = []
